--- a/public/main-app.html
+++ b/public/main-app.html
@@ -25,10 +25,7 @@
           <li><a href="#" id="nav-home" data-page="home">Inicio</a></li>
           <li><a href="#" id="nav-mi-plan" data-page="mi-plan">Mi Plan</a></li>
           <li><a href="#" id="nav-recetas" data-page="recetas">Recetas</a></li>
-          <li>
-            <a href="#" id="nav-entrenamientos" data-page="entrenamientos"
-              >Entrenamientos</a
-            >
+          <li><a href="#" id="nav-entrenamientos" data-page="entrenamientos">Entrenamientos</a>
           </li>
         </ul>
       </nav>
