--- a/public/main-app.html
+++ b/public/main-app.html
@@ -69,7 +69,9 @@
     <footer class="app-footer">
       <p>&copy; 2025 VidaFit. Todos los derechos reservados.</p>
     </footer>
-
+    <!-- ✅ FullCalendar GLOBAL (UMD, sin módulos) -->
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    
     <script type="module" src="js/main-app.js"></script>
     <script type="module"></script>
   </body>
