--- a/public/main-app.html
+++ b/public/main-app.html
@@ -30,6 +30,11 @@
               >Entrenamientos</a
             >
           </li>
+          <li>
+            <a href="#" id="nav-ayuda-inteligente" data-page="ayuda-inteligente"
+              >Ayuda Inteligente</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="user-info">
@@ -69,8 +74,6 @@
     <footer class="app-footer">
       <p>&copy; 2025 VidaFit. Todos los derechos reservados.</p>
     </footer>
-
     <script type="module" src="js/main-app.js"></script>
-    <script type="module"></script>
   </body>
 </html>
