--- a/public/main-app.html
+++ b/public/main-app.html
@@ -73,6 +73,9 @@
     <footer class="app-footer">
       <p>&copy; 2025 VidaFit. Todos los derechos reservados.</p>
     </footer>
+    <!-- ✅ FullCalendar CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
     <script type="module" src="js/main-app.js"></script>
   </body>
 </html>
